Adding Jeremy to the package file.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Chris Powers <chrisjpowers@gmail.com> (http://chrisjpowers.com)",
   "contributors": [
     "Ben Mills",
-    "Jeremy Kahn",
+    "Jeremy Kahn <jeremyckahn@gmail.com> (http://www.jeremyckahn.com/)",
     "Mike Gibson"
   ],
   "name": "coding_stage",
