--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "everyauth": "0.2.18",
     "postageapp": "0.0.5",
     "coffee-script": "1.1.2",
-    "ejs": "0.4.3"
+    "ejs": "0.4.3",
+    "mongoose-types": "1.0.3"
   },
   "devDependencies": {}
 }
