--- a/deploy.conf
+++ b/deploy.conf
@@ -4,4 +4,4 @@ host 69.164.220.218
 repo git@github.com:nko2/team-honey-badger.git
 ref origin/master
 path /home/deploy/app
-post-deploy npm install && [ -e ../shared/pids/node.pid ] && sudo restart node || sudo start node
+post-deploy npm install && [ -e ../shared/pids/node.pid ] && sudo restart node || sudo start node && cp ../shared/config.json config/
