--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ejs": "0.4.3",
     "mongoose-types": "1.0.3",
     "opentok": "0.1.2",
-    "pusher-pipe": "0.0.6"
+    "pusher-pipe": "0.0.6",
+    "mongoose-auth": "~0.0.11"
   },
   "devDependencies": {}
 }
